feat: Time picker implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
         <!-- Declare NewJourneyActivity here -->
         <activity
-                android:name=".NewJourneyActivity"
+                android:name=".ui.addjourney.NewJourneyActivity"
                 android:exported="true" />
 
     </application>
